--- a/Proyectos/templates/Proyectos/Contrato/crear.html
+++ b/Proyectos/templates/Proyectos/Contrato/crear.html
@@ -43,7 +43,7 @@
                                         <div class="form-row">
                                              <div class="col-md-6">
                                                 <label for="cliente_select">Cliente</label>
-                                                <select class="select2 form-control w-100 select2-selection--single" id="cliente_select" name="cliente_id"  required >
+                                                <select class="select2 form-control" id="cliente_select" name="cliente_id"  required >
                                                     <option value="" >Seleccione un Cliente</option>
                                                     {% for tercero in terceros %}
                                                         {% if tercero.tipo_tercero.nombre.lower == 'cliente' %}
@@ -65,7 +65,7 @@
                                             <div class="col-md-6">
                                                 <br>
                                                 <label for="rango_anho_select">Año</label>
-                                                <select class="select2 form-control w-100 select2-selection--single" type="number" id="rango_anho_select" name="rango_anho" required >
+                                                <select class="select2 form-control" type="number" id="rango_anho_select" name="rango_anho" required >
                                                     <option value="" >Seleccione un año</option>
                                                     {% for anho in rango_anho %}
                                                         <option value="{{ anho }}" {% if anho == contrato.anho %}selected{% endif %}>{{ anho }}</option>
@@ -150,7 +150,7 @@
                                             <div class="col-md-6">
                                                 <br>
                                                 <label for="tipo_contrato_select">Tipo de contrato</label>
-                                                <select class="select2 form-control w-100 select2-selection--single"  id="tipo_contrato_select" name="tipo_contrato_id" required>
+                                                <select class="select2 form-control"  id="tipo_contrato_select" name="tipo_contrato_id" required>
                                                     <option value="" >Seleccione un Tipo de Contrato</option>
                                                     {% for tipo_contrato in tipo_contratos %}
                                                         <option value="{{ tipo_contrato.id }}" {% if tipo_contrato.id == contrato.tipo_contrato_id %} selected {% endif %}>{{ tipo_contrato.nombre }}</option>
@@ -163,7 +163,7 @@
                                             <div class="col-md-6">
                                                 <br>
                                                 <label for="empresa_select">Empresa</label>
-                                                <select class="select2 form-control w-100 select2-selection--single"  id="empresa_select" name="empresa_id"  required>
+                                                <select class="select2 form-control"  id="empresa_select" name="empresa_id"  required>
                                                     <option value="" >Seleccione una Empresa</option>
                                                     {% for empresa in empresas %}
                                                         <option value="{{ empresa.id }}" {% if empresa.id == contrato.empresa_id %} selected {% endif %}>{{ empresa.nombre }}</option>
@@ -205,99 +205,7 @@
 <script src="{% static 'EVA/Plantilla/js/validaciones/validar_campos.js' %}"></script>
     <script>
 		$(document).ready(function () {
-			$(function() {
-				$('.select2').select2();
-
-				$(".select2-placeholder-multiple").select2({
-					placeholder: "Select State"
-				});
-				$(".js-hide-search").select2({
-					minimumResultsForSearch: 1 / 0
-				});
-				$(".js-max-length").select2({
-					maximumSelectionLength: 2,
-					placeholder: "Select maximum 2 items"
-				});
-				$(".select2-placeholder").select2({
-					placeholder:"Select a state",
-					allowClear: true
-				});
-
-				$(".js-select2-icons").select2({
-					minimumResultsForSearch: 1 / 0,
-					templateResult: icon,
-					templateSelection: icon,
-					escapeMarkup: function (elm) {
-						return elm
-					}
-				});
-				function icon(elm) {
-					elm.element;
-					return elm.id ? "<i class='" + $(elm.element).data("icon") + " mr-2'></i>" + elm.text : elm.text
-				}
-
-				$(".js-data-example-ajax").select2({
-				  ajax: {
-				    url: "https://api.github.com/search/repositories",
-				    dataType: 'json',
-				    delay: 250,
-				    data: function (params) {
-				      return {
-				        q: params.term, // search term
-				        page: params.page
-				      };
-				    },
-				    processResults: function (data, params) {
-				      // parse the results into the format expected by Select2
-				      // since we are using custom formatting functions we do not need to
-				      // alter the remote JSON data, except to indicate that infinite
-				      // scrolling can be used
-				      params.page = params.page || 1;
-
-				      return {
-				        results: data.items,
-				        pagination: {
-				          more: (params.page * 30) < data.total_count
-				        }
-				      };
-				    },
-				    cache: true
-				  },
-				  placeholder: 'Search for a repository',
-				  escapeMarkup: function (markup) { return markup; }, // let our custom formatter work
-				  minimumInputLength: 1,
-				  templateResult: formatRepo,
-				  templateSelection: formatRepoSelection
-				});
-
-				function formatRepo (repo) {
-				  if (repo.loading) {
-				    return repo.text;
-				  }
-
-				  var markup = "<div class='select2-result-repository clearfix d-flex'>" +
-				    "<div class='select2-result-repository__avatar mr-2'><img src='" + repo.owner.avatar_url + "' class='width-2 height-2 mt-1 rounded' /></div>" +
-				    "<div class='select2-result-repository__meta'>" +
-				      "<div class='select2-result-repository__title fs-lg fw-500'>" + repo.full_name + "</div>";
-
-				  if (repo.description) {
-				    markup += "<div class='select2-result-repository__description fs-xs opacity-80 mb-1'>" + repo.description + "</div>";
-				  }
-
-				  markup += "<div class='select2-result-repository__statistics d-flex fs-sm'>" +
-				    "<div class='select2-result-repository__forks mr-2'><i class='fal fa-lightbulb'></i> " + repo.forks_count + " Forks</div>" +
-				    "<div class='select2-result-repository__stargazers mr-2'><i class='fal fa-star'></i> " + repo.stargazers_count + " Stars</div>" +
-				    "<div class='select2-result-repository__watchers mr-2'><i class='fal fa-eye'></i> " + repo.watchers_count + " Watchers</div>" +
-				  "</div>" +
-				  "</div></div>";
-
-				  return markup;
-				}
-
-				function formatRepoSelection (repo) {
-				  return repo.full_name || repo.text;
-				}
-			});
+		    $('.select2').select2();
 		});
 	</script>
 
