EVA-8 style: Se corrije tabulación en scrpts en los templates de crear, editar e index  de terceros.

--- a/Administracion/templates/Administracion/Tercero/crear.html
+++ b/Administracion/templates/Administracion/Tercero/crear.html
@@ -149,19 +149,18 @@
 	</script>
 
     <script type="text/javascript">
-	$('#defaultIndeterminate').prop('indeterminate', true)
+        'use strict';
+        $('#defaultIndeterminate').prop('indeterminate', true);
 
-	var toggleCheckbox = function(){
-		$('#js-checkbox-toggle').toggleText('Change to CIRCLE', 'Change back to default');
-		$('.frame-wrap .custom-checkbox').toggleClass('custom-checkbox-circle');
-	}
+        let toggleCheckbox = function(){
+            $('#js-checkbox-toggle').toggleText('Change to CIRCLE', 'Change back to default');
+            $('.frame-wrap .custom-checkbox').toggleClass('custom-checkbox-circle');
+        };
 
-	var toggleRadio = function (){
-		$('#js-radio-toggle').toggleText('Change to ROUNDED', 'Change back to default');
-		$('.frame-wrap .custom-radio').toggleClass('custom-radio-rounded');
-	}
-
-
+        let toggleRadio = function (){
+            $('#js-radio-toggle').toggleText('Change to ROUNDED', 'Change back to default');
+            $('.frame-wrap .custom-radio').toggleClass('custom-radio-rounded');
+        }
     </script>
 
 
