--- a/Administracion/templates/Administracion/Tercero/editar.html
+++ b/Administracion/templates/Administracion/Tercero/editar.html
@@ -150,16 +150,17 @@
     <script src="{% static 'Administracion/js/select_divipol.js' %}"></script>
 
     <script type="text/javascript">
-	$('#defaultIndeterminate').prop('indeterminate', true)
+        'use strict';
+        $('#defaultIndeterminate').prop('indeterminate', true);
 
-	var toggleCheckbox = function(){
-		$('#js-checkbox-toggle').toggleText('Change to CIRCLE', 'Change back to default');
-		$('.frame-wrap .custom-checkbox').toggleClass('custom-checkbox-circle');
-	}
+        let toggleCheckbox = function(){
+            $('#js-checkbox-toggle').toggleText('Change to CIRCLE', 'Change back to default');
+            $('.frame-wrap .custom-checkbox').toggleClass('custom-checkbox-circle');
+        };
 
-	var toggleRadio = function (){
-		$('#js-radio-toggle').toggleText('Change to ROUNDED', 'Change back to default');
-		$('.frame-wrap .custom-radio').toggleClass('custom-radio-rounded');
-	}
+        let toggleRadio = function (){
+            $('#js-radio-toggle').toggleText('Change to ROUNDED', 'Change back to default');
+            $('.frame-wrap .custom-radio').toggleClass('custom-radio-rounded');
+        };
     </script>
 {% endblock %}
