--- a/Administracion/templates/Administracion/Tercero/crear.html
+++ b/Administracion/templates/Administracion/Tercero/crear.html
@@ -162,10 +162,9 @@
 {% endblock %}
 {% block scripts %}
 
-
-<script src="{% static 'EVA/Plantilla/js/jquery-ui.min.js' %}"></script>
 <script src="{% static 'EVA/Plantilla/js/formplugins/select2/select2.bundle.js' %}"></script>
 <script src="{% static 'Administracion/js/select_divipol.js' %}"></script>
+    <script src="{% static 'EVA/Plantilla/js/custom/validaciones/validar_formulario.js' %}"></script>
     <script>
 		$(document).ready(function () {
 		    $('.select2').select2();
