--- a/Administracion/templates/Administracion/Tercero/crear.html
+++ b/Administracion/templates/Administracion/Tercero/crear.html
@@ -43,14 +43,14 @@
                                             <div class="col-md-6">
                                                 <label for="tercero_name">Nombre</label>
                                                 <input class="form-control" id="tercero_name" type="text" name="nombre" placeholder="Ingrese el nombre" required maxlength="100" value="{{ tercero.nombre }}">
-                                                <div class="invalid-feedback">
+                                                <div class="invalid-tooltip">
                                                   Por favor digite un nombre.
                                                 </div>
                                             </div>
                                             <div class="col-md-6">
                                                 <label for="tercero_identificacion">Identificación</label>
                                                 <input class="form-control" id="tercero_identificacion" type="text" name="identificacion" placeholder="Ingrese número de identificación" required maxlength="20" value="{{ tercero.identificacion }}">
-                                                <div class="invalid-feedback">
+                                                <div class="invalid-tooltip">
                                                   Por favor digite la identificación.
                                                 </div>
                                              </div>
@@ -63,7 +63,7 @@
                                                         <option value="{{ tipo_id.id }}" {% if tipo_id.id == tercero.tipo_identificacion_id %} selected {% endif %}>{{ tipo_id.nombre }}</option>
                                                     {% endfor %}
                                                 </select>
-                                                <div class="invalid-feedback">
+                                                <div class="invalid-tooltip">
                                                   Por favor seleccione un tipo de identificación.
                                                 </div>
                                             </div>
@@ -76,7 +76,7 @@
                                                         <option value="{{ tipo_id.id }}" {% if tipo_id.id == tercero.empresa_id %} selected {% endif %}>{{ tipo_id.nombre }}</option>
                                                     {% endfor %}
                                                 </select>
-                                                <div class="invalid-feedback">
+                                                <div class="invalid-tooltip">
                                                   Por favor seleccione una empresa.
                                                 </div>
                                             </div>
@@ -90,7 +90,7 @@
                                                         <option value="{{ tipo_id.id }}" {% if tipo_id.id == tercero.tipo_tercero_id %} selected {% endif %}>{{ tipo_id.nombre }}</option>
                                                     {% endfor %}
                                                 </select>
-                                                <div class="invalid-feedback">
+                                                <div class="invalid-tooltip">
                                                   Por favor seleccione un tipo de tercero.
                                                 </div>
                                             </div>
@@ -104,7 +104,7 @@
                                                         <option value="{{ departamento.id }}" {% if departamento.id == tercero.centro_poblado.municipio.departamento.id %} selected {% endif %} >{{ departamento.nombre }}</option>
                                                     {% endfor %}
                                                 </select>
-                                                <div class="invalid-feedback">
+                                                <div class="invalid-tooltip">
                                                   Por favor seleccione un departamento.
                                                 </div>
                                             </div>
@@ -118,7 +118,7 @@
                                                         <option value="{{ municipio.id }}" {% if municipio.id == tercero.centro_poblado.municipio.id %} selected {% endif %} >{{ municipio.nombre }}</option>
                                                     {% endfor %}
                                                 </select>
-                                                <div class="invalid-feedback">
+                                                <div class="invalid-tooltip">
                                                   Por favor seleccione un municipio.
                                                 </div>
                                             </div>
@@ -133,7 +133,7 @@
                                                     {% endfor %}
 
                                                 </select>
-                                                <div class="invalid-feedback">
+                                                <div class="invalid-tooltip">
                                                   Por favor seleccione un centro poblado.
                                                 </div>
                                             </div>
