--- a/Administracion/templates/Administracion/Tercero/editar.html
+++ b/Administracion/templates/Administracion/Tercero/editar.html
@@ -34,14 +34,14 @@
                                             <div class="col-md-6">
                                                 <label for="empleado_name">Nombre</label>
                                                 <input class="form-control" id="tercero_name" type="text" name="nombre" placeholder="Ingrese el nombre" required maxlength="100" value="{{ tercero.nombre }}">
-                                                <div class="invalid-feedback">
+                                                <div class="invalid-tooltip">
                                                   Por favor digite el nombre.
                                                 </div>
                                             </div>
                                             <div class="col-md-6">
                                                 <label for="empleado_last_name">Identificación</label>
                                                 <input class="form-control" id="tercero_identificacion" type="text" name="identificacion" placeholder="Ingrese el número de identificación" required maxlength="15" value="{{ tercero.identificacion }}">
-                                                <div class="invalid-feedback">
+                                                <div class="invalid-tooltip">
                                                   Por favor digite la identificación.
                                                 </div>
                                             </div>
@@ -57,7 +57,7 @@
                                                         <option value="{{ tipo_id.id }}" {% if tipo_id.id == tercero.tipo_identificacion_id %} selected {% endif %}>{{ tipo_id.nombre }}</option>
                                                     {% endfor %}
                                                 </select>
-                                                <div class="invalid-feedback">
+                                                <div class="invalid-tooltip">
                                                   Por favor seleccione un tipo de identificación.
                                                 </div>
                                             </div>
@@ -69,7 +69,7 @@
                                                         <option value="{{ empresa.id }}" {% if empresa.id == tercero.empresa_id %} selected {% endif %}>{{ empresa.nombre }}</option>
                                                     {% endfor %}
                                                 </select>
-                                                <div class="invalid-feedback">
+                                                <div class="invalid-tooltip">
                                                   Por favor seleccione una empresa.
                                                 </div>
                                             </div>
@@ -86,7 +86,7 @@
                                                         <option value="{{ tipo.id }}" {% if tipo.id == tercero.tipo_tercero_id %} selected {% endif %}>{{ tipo.nombre }}</option>
                                                     {% endfor %}
                                                 </select>
-                                                <div class="invalid-feedback">
+                                                <div class="invalid-tooltip">
                                                   Por favor seleccione un tipo de tercero.
                                                 </div>
                                             </div>
@@ -98,7 +98,7 @@
                                                         <option value="{{ departamento.id }}" {% if departamento.id == tercero.centro_poblado.municipio.departamento.id %} selected {% endif %} >{{ departamento.nombre }}</option>
                                                     {% endfor %}
                                                 </select>
-                                                <div class="invalid-feedback">
+                                                <div class="invalid-tooltip">
                                                   Por favor seleccione un departamento.
                                                 </div>
                                             </div>
@@ -113,7 +113,7 @@
                                                         <option value="{{ municipio.id }}" {% if municipio.id == tercero.centro_poblado.municipio.id %} selected {% endif %} >{{ municipio.nombre }}</option>
                                                     {% endfor %}
                                                 </select>
-                                                <div class="invalid-feedback">
+                                                <div class="invalid-tooltip">
                                                   Por favor seleccione un municipio.
                                                 </div>
                                             </div>
@@ -125,7 +125,7 @@
                                                         <option value="{{ c_poblado.id }}" {% if c_poblado.id == tercero.centro_poblado.id %} selected {% endif %} >{{ c_poblado.nombre }}</option>
                                                     {% endfor %}
                                                 </select>
-                                                <div class="invalid-feedback">
+                                                <div class="invalid-tooltip">
                                                   Por favor seleccione un centro poblado.
                                                 </div>
                                             </div>
