EVA-13 fix: Se soluciona que no estba mostrando correctamente el mensjae de error para le campo de tipo de indentifiación en crear y editar un Tercero.

--- a/Administracion/templates/Administracion/Tercero/crear-editar.html
+++ b/Administracion/templates/Administracion/Tercero/crear-editar.html
@@ -84,7 +84,7 @@
                                                         <option value="{{ tipo_id.id }}" {% if tipo_id.id == tercero.tipo_identificacion_id %} selected {% endif %}>{{ tipo_id.nombre }}</option>
                                                     {% endfor %}
                                                 </select>
-                                                <div class="invalid-feedback">
+                                                <div class="invalid-tooltip">
                                                   Por favor seleccione un tipo de identificación.
                                                 </div>
                                             </div>
