--- a/Administracion/templates/Administracion/Tercero/crear-editar.html
+++ b/Administracion/templates/Administracion/Tercero/crear-editar.html
@@ -179,10 +179,9 @@
             </div>
         </div>
     </div>
+{% endblock main %}
 
-{% endblock %}
 {% block scripts %}
-
     <script src="{% static 'EVA/Plantilla/js/formplugins/select2/select2.bundle.js' %}"></script>
     <script src="{% static 'Administracion/js/select_divipol.js' %}"></script>
     <script src="{% static 'EVA/Plantilla/js/custom/validaciones/validar_formulario.js' %}"></script>
@@ -191,4 +190,4 @@
 		    $('.select2').select2();
 		});
 	</script>
-{% endblock %}
+{% endblock scripts%}
